# uflags

./: CMakeLists.txt  README.md
docs/: CMakeLists.txt
include/: uflags.h
test/: CMakeLists.txt  test.c
